# ETAIQ

./: .env.example  .gitignore  CLEANING_ENGINE_REDESIGN_SUMMARY.md  METRICS_AUDIT_REPORT.md  Makefile  README.md  pyproject.toml  test_assistant_dataset.py  test_assistant_endpoint.py  test_dataset.py  test_minimal_dataset.py  tiny_test.py
.cursor/: coding_rules.md  (+3 more)
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  assistant.py  context.py  conversation.py  memory.py  openrouter_client.py  prompts.py  retriever.py  schemas.py
backend/app/api/: __init__.py  assistant.py  dataset.py  drift.py  experiments.py  explainability.py  health.py  models.py  monitoring.py  performance.py  prediction.py  router.py  training.py
backend/app/auth/: __init__.py
backend/app/core/: __init__.py  artifact_resolver.py  config.py  logging.py
backend/app/database/: __init__.py
backend/app/models/: __init__.py
backend/app/monitoring/: __init__.py
backend/app/schemas/: __init__.py  health.py  ml_management.py  prediction.py
backend/app/services/: __init__.py
backend/app/utils/: __init__.py
backend/ml/artifacts/preprocessing/: preprocessor_metadata.json
backend/ml/data/features/: encoding_plan.csv
backend/ml/data/training/experiments/: experiments.json
backend/ml/data/training/monitoring/: monitoring_records.json
backend/requirements/: base.txt  dev.txt  ml.txt  prod.txt
backend/tests/: __init__.py  test_ai_assistant.py  test_ai_assistant_api.py  test_ai_retriever.py  test_health.py
backend/tests/api/: test_ml_management_api.py  test_prediction_api.py
(+291 files in other folders)
