[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etaiq"
version = "0.1.0"
description = "ETAIQ AI Powered ETA Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"xgboost>=2.1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0"]

[tool.setuptools.packages.find]
where = ["backend", "ml"]
include = ["app*", "ml*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend"]
testpaths = ["backend/tests", "ml/tests"]
